# ps-vita-sdl-hello-world

./: .gitignore  CMakeLists.txt  README.md
src/: main.c  main.cpp
